[EPAD8-1787] fix overlap floats, remove floats on unwanted layouts

--- a/services/drupal/web/themes/epa_theme/source/_patterns/03-uswds/summary-box/_summary-box.scss
+++ b/services/drupal/web/themes/epa_theme/source/_patterns/03-uswds/summary-box/_summary-box.scss
@@ -1,3 +1,19 @@
+.usa-summary-box {
+  overflow: auto;
+
+  .l-sidebar__sidebar &,
+  .l-grid &,
+  .l-resource-directory & {
+    &.u-align-left,
+    &.u-align-right {
+      float: none;
+      margin-left: 0;
+      margin-right: 0;
+      width: 100%;
+    }
+  }
+}
+
 .usa-summary-box__body {
   overflow: hidden;
 }
